# gnome-next-meeting-applet

./: .dockerignore  .gitignore  .pylintrc  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  NEWS.yaml  README.md  README.rst  TODO.md  client.py  config.sample.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: automerge.yaml  pythonapp.yml  testing.yml
data/desktop/: com.chmouel.gnomeNextMeetingApplet.appdata.xml  com.chmouel.gnomeNextMeetingApplet.desktop  gnome-next-meeting-applet.desktop
debian/: .#increase-release.sh  Dockerfile  build.sh  changelog  control  increase-release.sh  rules
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
gnma/: applet.py  cli.py  config.py  dbusclient.py  dbusservice.py  gnome_online_account_cal.py  icons.py  strings.py  types.py
gnome_next_meeting_applet/: __init__.py  applet.py  auth.py  cli.py  evolution_calendars.py  strings.py
packaging/: make-release.sh  update-aur
packaging/aur/: Dockerfile  build.sh
packaging/debian/: Dockerfile  build.sh  changelog  control  rules
packaging/flatpak/: .gitignore  Makefile  com.chmouel.gnomeNextMeetingApplet.yaml  dev.yaml  release.yaml  update-appdata-xml.py  update-release.sh  upload-file-to-github.py
packaging/rpm/: Dockerfile  build.sh  gnome-next-meeting-applet.spec  manual.sh
rpm/: Dockerfile  build.sh  gnome-next-meeting-applet.spec  manual.sh
tests/: __init__.py  test_gnome_next_meeting_applet.py  test_strings.py
