[tool.poetry]
name = "gnome_next_meeting_applet"
version = "2.9.2"
description = "Show your next meeetings in an applet"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
maintainers = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chmouel/gnome-next-meeting-applet"
keywords = [
    "calendar", "Gnome",
]
packages = [
    { include = "gnma" }
]

include = [
 { path = "data/", format = ["sdist"] },
 { path = "config.sample.yaml", format = ["sdist"] }
]

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "^3.0.0"
python-dateutil = "*"
PyYAML = "*"
humanize = "*"
dbus-python = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
toml = "*"
pylint = "*"
mypy = "^0.982"
ipython = "^8.5.0"

[tool.poetry.scripts]
gnome-next-meeting-applet = "gnma.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/chmouel/gnome-next-meeting-applet/issues"

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*deprecated:DeprecationWarning"
]
