[tool.poetry]
name = "gnome_next_meeting_applet"
version = "2.12.2"
description = "Show your next meeetings in an applet"
authors = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
maintainers = ["Chmouel Boudjnah <chmouel@chmouel.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/chmouel/gnome-next-meeting-applet"
keywords = ["calendar", "Gnome"]
packages = [{ include = "gnma" }]

include = [
    { path = "data/", format = [
        "sdist",
    ] },
    { path = "config.sample.yaml", format = [
        "sdist",
    ] },
]

[tool.poetry.dependencies]
python = "^3.8"
PyGObject = "3.46.0"
python-dateutil = "*"
PyYAML = "*"
humanize = "*"
dbus-python = "1.2.18"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
pytest = "*"
toml = "*"
mypy = "^1.7"
ipython = "^8.12.3"

[tool.ruff]
ignore = ["E402"]

[tool.poetry.scripts]
gnome-next-meeting-applet = "gnma.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
issues = "https://github.com/chmouel/gnome-next-meeting-applet/issues"

# pyproject.toml
[tool.pytest.ini_options]
filterwarnings = ["ignore:.*deprecated:DeprecationWarning"]
